syntax = "proto3";

package user;

option go_package = "proto/user";

service UserService {
  rpc GetUserByID(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string email = 2;
  string created_at = 3;
}
